# panthera-TH-

./: .gitignore  1.2 fdcan协议解析 .docx  1.2 fdcan协议解析 .txt  canfd帧结构.py
Panthera-HT_SDK/: README_Windows.md  bench_result.txt  bench_result_v2.txt
Panthera-HT_SDK/panthera_cpp/: .gitignore
Panthera-HT_SDK/panthera_cpp/motor_cpp/: CMakeLists.txt
Panthera-HT_SDK/panthera_cpp/motor_cpp/cmake/: hightorque_robotConfig.cmake.in
Panthera-HT_SDK/panthera_cpp/motor_cpp/include/: serial_struct.hpp
Panthera-HT_SDK/panthera_cpp/motor_cpp/include/hardware/: robot.hpp
Panthera-HT_SDK/panthera_cpp/motor_cpp/robot_param/: 12dof_STM32H730_model_test_Orin_params.yaml  1dof_STM32H730_model_test_Orin_params.yaml  20dof_STM32H730_model_test_Orin_params.yaml  23dof_STM32H730_model_test_Orin_params.yaml  2dof_STM32H730_model_test_Orin_params.yaml  6dof_STM32H730_model_test_Orin_params.yaml  80dof_STM32H730_model_test_Orin_params.yaml  motor_1.yaml
Panthera-HT_SDK/panthera_cpp/motor_cpp/src/hardware/: robot.cpp
Panthera-HT_SDK/panthera_cpp/motor_cpp/third_part/lcm/lcm/: lcm.h
Panthera-HT_SDK/panthera_cpp/motor_cpp/third_part/serial_cmake/: CMakeLists.txt
Panthera-HT_SDK/panthera_cpp/motor_example_debug/: CMakeLists.txt  README.md
Panthera-HT_SDK/panthera_cpp/motor_example_debug/include/: hightorque_serial.hpp  port_picker.hpp
Panthera-HT_SDK/panthera_cpp/motor_example_debug/linux/: 99-panthera-debug-board.rules  README.md  build.sh  install_deps.sh  robot.linux.cfg  run_rt.sh  setup_udev.sh
Panthera-HT_SDK/panthera_cpp/motor_example_debug/src/: 01_motor_get_status.cpp  09_set_zero.cpp  11_multi_joint_control.cpp  12_demo_new_features.cpp  13_test_many.cpp  14_set_limits.cpp  hightorque_serial.cpp
Panthera-HT_SDK/panthera_cpp/robot_cpp/robot_param/motor_param/: 6dof_Panthera_params_follower.yaml  6dof_Panthera_params_leader.yaml
Panthera-HT_SDK/panthera_python/: CMakeLists.txt
Panthera-HT_SDK/panthera_python/hightorque_robot/: __init__.py
Panthera-HT_SDK/panthera_python/robot_param/motor_param/: 6dof_Panthera_params_follower.yaml  motor_1.yaml  motor_6.yaml
Panthera-HT_SDK/panthera_python/scripts/: 1_Joint_Vel_control.py  1_forward_kinematics_test.py  1_inverse_kinematics_test.py  1_moveJ_control.py  2_gravity_friction_compensation_control.py  3_gravity_compensation_with_fk.py  3_interpolation_control_nozeroVel.py  4_impedance_trajectory_control_with_gra_pd.py  6_moveL_pos_control.py  7_keyboard_cartesian_pos_control.py  7_keyboard_cartesian_vel_control.py
Panthera-HT_SDK/panthera_python/scripts/motor_example/: 01_motor_get_status.py  02_position_control.py  03_velocity_control.py  04_torque_control.py  05_voltage_control.py  06_current_control.py  07_pos_vel_maxtorque_control.py  08_pos_vel_torque_kp_kd_control.py  09_set_zero.py  10_test_single_joint.py  11_multi_joint_control.py  hightorque_serial.py  motor_control.py  test_motor_control.py
docs/: fdcan_protocol.md
fafu_robot_sdk/: README.md  技术文档.md
fafu_robot_sdk/fafu_robot_cpp/: CMakeLists.txt  README.md  bindings.cpp  build.bat
fafu_robot_sdk/fafu_robot_cpp/include/: hightorque_serial.hpp  robot_config.hpp
fafu_robot_sdk/fafu_robot_cpp/linux/: 99-panthera-debug-board.rules  README.md  build.sh  build_module_only.sh  install_deps.sh  robot.linux.cfg  run_rt.sh  setup_udev.sh
fafu_robot_sdk/fafu_robot_cpp/sdk/: CMakeLists.txt  README.md
fafu_robot_sdk/fafu_robot_cpp/sdk/examples/: 01_smoke.cpp  02_move_j.cpp  03_gripper.cpp  04_servo_j.cpp
fafu_robot_sdk/fafu_robot_cpp/sdk/include/fafu/: fafu_robot_controller.hpp
fafu_robot_sdk/fafu_robot_cpp/sdk/src/: fafu_robot_controller.cpp
fafu_robot_sdk/fafu_robot_cpp/src/: hightorque_serial.cpp
fafu_robot_sdk/fafu_robot_python/: README.md  __init__.py  diag_motor_jump.py  fafu_robot_controller.py  panthera_motor.cp310-win_amd64.pyd  panthera_motor.cp38-win_amd64.pyd  requirements.txt  robot.cfg
fafu_robot_sdk/fafu_robot_python/examples/: visible_motion.py
fafu_robot_sdk/fafu_robot_python/tests/: diag_hold_torque.py  diag_motors.py  diag_torque_ramp.py  smoke_test.py  test_fafu_grasp_calibrate.py  test_fafu_gravity_comp.py  test_fafu_gravity_only.py  test_fafu_keyboard_cartesian.py  test_fafu_kinematics.py  test_fafu_mit_gravity.py  test_fafu_motion_interactive.py  test_fafu_servo_j.py  test_one_joint.py
livelybot_fdcan/: livelybot_fdcan.c  livelybot_fdcan.h
panthera_web/: CMakeLists.txt  README.md  app.py  arm_multi_joint_example.py  bindings.cpp  build.bat  panthera_arm_controller.py  requirements.txt  robot.cfg  test_visible.py  wrs_panthera_arm_controller.py
panthera_web/static/: app.js  style.css
panthera_web/templates/: index.html
panthera_web/tests/: smoke_test.py  test_one_joint.py  test_wrs_motion_interactive.py
